fix: improve step spacing/layout

--- a/assets/src/js/admin/onboarding-wizard/components/wizard/style.scss
+++ b/assets/src/js/admin/onboarding-wizard/components/wizard/style.scss
@@ -1,5 +1,6 @@
 .give-obw {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	height: 100%;
